Request releases of current user per request instead of own endpoint